# ragtry

./: .gitignore  justfile  main.py  plan.md  pyproject.toml  requirements.md
src/: __init__.py  app_types.py  cli.py  config.py  document_loader.py  exceptions.py  keyword_search.py  rag_service.py  vector_store.py
tests/: coverage_report.md  test_cli.py  test_document_loader.py  test_hybrid_search.py  test_keyword_search.py  test_rag_service.py  test_vector_store.py
tests/e2e/: conftest.py
tests/e2e/cli/: test_cli_happy_path.py
tests/e2e/env/: test_environment_switching.py
tests/integration/: conftest.py  test_document_loader_integration.py  test_rag_service_integration.py  test_vector_store_integration.py
